# auto-cc

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
